fix gif overflowing in small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 
 img {
     height: 200px;
+    max-width: 100%;
 }
 
 #start-button {
